[bugfix] noti